further refactor ProgrammingExerciseGradingService